# lens

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs
.github/workflows/: ci.yml  release.yml
assets/: index.html
docs/: _config.yml  development-case.md  elaboration-phase-plan.md  glossary.md  improvement-proposals.md  index.md  release-notes.md  release-readiness.md  release.md  risk-list.md  supplementary-specification.md  user-prompts.md  vision.md
docs/decisions/: adr-001-public-plantuml-rendering.md  adr-001-rust-runtime.md  adr-002-loopback-viewer-scope.md  adr-003-document-root-discovery.md  adr-004-v1-release-scope.md  adr-005-controlled-renderer-browser-tests.md  adr-006-document-navigation-pane.md  adr-007-poll-known-document-paths.md  adr-008-paginated-session-catalog-search.md  adr-008-selectable-plantuml-rendering.md  adr-009-linux-binary-release-artifacts.md  adr-009-selectable-plantuml-rendering.md  adr-010-diagram-failure-controls.md  adr-010-linux-binary-release-artifacts.md  adr-011-diagram-failure-controls.md  adr-011-standalone-plantuml-files.md  adr-012-cross-platform-support.md  adr-012-standalone-plantuml-files.md  adr-013-cross-platform-support.md  adr-013-release-automation.md  adr-014-release-automation.md  adr-014-yaml-frontmatter-rendering.md  (+3 more)
scripts/: asset-check.mjs  browser-interaction.mjs  browser-smoke.mjs  install-smoke.sh  package-linux-release.sh  package-release.sh
src/: lib.rs  main.rs  markdown.rs  plantuml.rs  target.rs  viewer.rs
src/viewer/: mod.rs  (+6 more)
tests/: cli.rs
(+80 files in other folders)
