[package]
name = "lens"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "=1.0.79"
axum = "=0.6.20"
clap = { version = "=4.4.18", features = ["derive"] }
flate2 = "=1.0.28"
futures-util = "=0.3.31"
# Keep transitive URL dependencies compatible with the repository's Cargo 1.75 toolchain.
idna_adapter = "=1.0.0"
indexmap = "=2.2.6"
pulldown-cmark = "=0.9.3"
reqwest = { version = "=0.11.24", default-features = false, features = ["rustls-tls", "stream"] }
thiserror = "=1.0.56"
tokio = { version = "=1.35.1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
tower = { version = "=0.4.13", features = ["util"] }
